# pyLCD

./: .mega-linter.yml  README.md  Readme.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  set-version-tag.yml  tests.yml  update-and-publish.yml
pylcd/: lcd_sym_even.py
